feat: Improved HTML to UJFE Java DSL Converter
Refs: UJFE-023